[package]

description = "HPS SWC plugin for https://www.npmjs.com/package/babel-plugin-transform-imports"


authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
license      = { workspace = true }
name         = "modularize_imports"
publish      = false
repository   = { workspace = true }
rust-version = { workspace = true }
version      = "1.0.0"


[dependencies]
cow-utils  = { workspace = true }
handlebars = "6.3.0"
heck       = { workspace = true }
rustc-hash = { workspace = true }
serde      = { workspace = true }
swc_core   = { workspace = true, features = ["common", "ecma_ast", "ecma_visit"] }

[package.metadata.cargo-machete]
ignored = ["Inflector"]
